--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ footer{border-top:1px solid var(--border);background:#fff;margin-top:40px}
 
 .headerBar{
   margin:0 auto;
-  padding:16px 20px 18px;
+  padding:2px 20px;
   background:rgba(255,255,255,.88);
   border-radius:18px;
   border:1px solid rgba(255,255,255,.55);
